--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -36,7 +36,7 @@ nav {
 	a {
 		button{
 			width: 25%;
-			background: blue;
+			background: orange;
 			height: 100%;
 			border: none;
 			color: white;
